--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@tanstack/react-query": "^5.29.0",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.14",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
@@ -22,8 +24,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.14.0",
-    "react-navigation-stack": "^2.10.4",
-    "expo-updates": "~0.18.14"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
